--- a/src/lithium/supmat/coop.tex
+++ b/src/lithium/supmat/coop.tex
@@ -40,6 +40,35 @@ D_{02} = d_{02} E_{02}\\
 \right.
 \end{equation}
 
+\begin{equation}
+\partial_t
+\begin{bmatrix}
+E_{00}\\
+E_{01}\\
+E_{02}\\
+\end{bmatrix}
+=
+\begin{bmatrix}
+0 & d_{01} & d_{02}\\
+0 & -d_{01} & 0\\
+0 & 0 & -d_{02}\\
+\end{bmatrix}
+\begin{bmatrix}
+E_{00}\\
+E_{01}\\
+E_{02}\\
+\end{bmatrix}
++
+\begin{bmatrix}
+-a_{01}E_{00} & - a_{02} E_{00}\\
+a_{01} E_{00} & 0 \\
+0 & a_{02} E_{00} \\
+\end{bmatrix}
+\begin{bmatrix}
+C_1\\
+C_2\\
+\end{bmatrix}
+\end{equation}
 
 
 \end{document}
