--- a/src/lithium/supmat/coop.tex
+++ b/src/lithium/supmat/coop.tex
@@ -218,6 +218,9 @@ And
 \subsection{Steady State}
 
 \subsubsection{Second layer as a function of the first layer}
+
+\end{document}
+
 Using the three equations describing the second layer and assuming that the internal pre-equilibrium is fast, we express:
 \begin{equation}
 \boxed{
