--- a/src/lithium/supmat/coop.tex
+++ b/src/lithium/supmat/coop.tex
@@ -147,6 +147,21 @@ Leading to the three equations:
 \right.
 \end{equation}
 
+In particular, with
+\begin{equation}
+	\Theta = e^{\dfrac{-z_u F V_m }{RT}}
+\end{equation}
+
+\begin{equation}
+	\left.\dfrac{\beta_u}{\beta_v}\right\vert_{t\to0} \simeq \left.\dfrac{\partial_t \beta_u}{\partial_t\beta_v}\right\vert_{t\to0}
+	= \dfrac{\mathfrak{E} \left[\dfrac{k^p_u J_u}{1+J_0 C_0}\right] \proton_0 + k_u  \Theta_0
+	}
+	{
+	\mathfrak{E} \left[\dfrac{k^p_v J_v}{1+J_0 C_0}\right] \proton_0 + k_v  \Theta_v
+	}
+\end{equation}
+
+
 \section{Two Layers}
 \subsection{Scheme}
 
