--- a/src/lithium/supmat/coop.tex
+++ b/src/lithium/supmat/coop.tex
@@ -278,6 +278,28 @@ E_{11} + E_{12} + E_{22} = <{\vec{C}} \vert \mymat{F} \vert \vec{E}_1 >, \;\;
 	f_{12} & f_{22}\\
 \end{bmatrix}
 \end{equation}
+and
+\begin{equation}
+\left\lbrace
+\begin{array}{rcll}
+	\partial_t \myconc{\spx_1} & = & <\vec{C}|\mymat{G}_1|\vec{E}_1> + k_1\left(\Theta C_1 - \myconc{\spx_1}\right), &
+	\mymat{G}_1 = 
+	\begin{bmatrix}
+	f_{11}k^p_{11} & f_{21} k^p_{12} \\
+	f_{12}k^p_{12} & 0 \\
+	\end{bmatrix}
+	\\
+	\\
+	\partial_t \myconc{\spx_2} & = & <\vec{C}|\mymat{G}_2|\vec{E}_1> + k_1\left(\Theta C_2 - \myconc{\spx_1}\right), &
+	\mymat{G}_2 = 
+	\begin{bmatrix}
+	0              & f_{21} k^p_{21}\\
+	f_{12}k^p_{21} & f_{22}k^p_{22}\\
+	\end{bmatrix}
+	\\
+\end{array}
+\right.
+\end{equation}
 
 \subsubsection{First layer as a function of the external components}
 We define:
